--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://wangxijordan-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1i4z4y4t3x3f.us-south.codeengine.appdomain.cloud
+sentiment_analyzer_url=https://sentianalyzer.1i56bpix5569.us-south.codeengine.appdomain.cloud/
